# Unofficial-TailScale-GUI

./: App0.1.Py  GITHUB_SETUP.md  README.md  account_page.py  controller_page.py  pyproject.toml  status_page.py
assets/images/os-icons/: README.md
assets/images/os-icons/android-logo-pack/: android-logo.eps
tailscale_controller/: __init__.py  account_page.py  app.py  controller_page.py  status_page.py
tailscale_controller/assets/images/os-icons/: README.md
